Fixed letter spacing and yellow color

--- a/src/styles/bulma/bds-ext.sass
+++ b/src/styles/bulma/bds-ext.sass
@@ -2,18 +2,18 @@
 
 /* Typography */
 .title.is-0
-    font-size: 5vw
+    font-size: 4.5vw
 
 @media (min-width: 1500px)
     .title.is-0
-        font-size: 5rem
+        font-size: 4.5rem
 
+.title
+    letter-spacing: -1px
 .title.is-0,
 .title.is-1,
 .title.is-2
     letter-spacing: -1.5px
-.title.is-3
-    letter-spacing: -1px
 .title.is-5,
 .title.is-6
     letter-spacing: -.5px
