--- a/src/styles/bulma/bulma.sass
+++ b/src/styles/bulma/bulma.sass
@@ -10,7 +10,7 @@ $purple         : #aa50b5 !default
 $red            : #f45564 !default
 $orange         : #ff8f41 !default
 $green          : #00c46c !default
-$yellow         : #ffce4a !default
+$yellow         : #ffc748 !default
 $turquoise      : #00c8b5 !default
 
 $black          : #1a0e23 !default
@@ -39,7 +39,7 @@ $claim          : #FFA335 !default
 
 $info           : mix($primary, $blue, 25) !default
 $success        : mix($turquoise, $care, 25) !default
-$warning        : $claim !default
+$warning        : $yellow !default
 $danger         : $red !default
 
 // Invert colors
